# Hephaestus

./: .gitmodules  BUILD.md  CMakeLists.txt  Doxyfile  README.md  TODO.md  main.dox  run.sh
api/hp/: config.hpp  hp.hpp  logging.hpp
api/hp/vk/: instance.hpp  vk.hpp  window.hpp
docs/: annotated.html  classes.html  dir_16e860880acdf9d3e09408cc5156cb12.html  dir_16e860880acdf9d3e09408cc5156cb12_dep.dot  dir_16e860880acdf9d3e09408cc5156cb12_dep.map  dir_16e860880acdf9d3e09408cc5156cb12_dep.md5  dir_950e320aff8085aa7f2d73afb00b4f69.html  dir_950e320aff8085aa7f2d73afb00b4f69_dep.map  dir_950e320aff8085aa7f2d73afb00b4f69_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  (+12 more)
docs/d0/d1b/: classhp_1_1profiler.html
docs/d0/d92/: classhp_1_1vk_1_1shader__program.html
docs/d0/da9/: logging_8hpp.html  logging_8hpp_source.html
docs/d0/dbc/: classhp_1_1vk_1_1staging__buffer.html
docs/d0/dc2/: main_8dox.html
docs/d0/dfe/: window_8hpp__incl.dot  window_8hpp__incl.map  window_8hpp__incl.md5
docs/d1/d12/: structhp_1_1vk_1_1vertex__buffer__coll__graph.map  structhp_1_1vk_1_1vertex__buffer__coll__graph.md5
docs/d1/d6b/: classhp_1_1vk_1_1vertex__buffer__inherit__graph.map  classhp_1_1vk_1_1vertex__buffer__inherit__graph.md5
docs/d2/d02/: vk_8hpp.html  vk_8hpp_source.html
docs/d2/d5a/: window_8hpp.html  window_8hpp_source.html
docs/d2/d99/: structhp_1_1vk_1_1index__buffer.html
docs/d2/d9a/: logging_8hpp__dep__incl.dot  logging_8hpp__dep__incl.map  logging_8hpp__dep__incl.md5
docs/d2/db3/: classhp_1_1vk_1_1window__coll__graph.dot
docs/d2/dda/: structhp_1_1vk_1_1swap__chain__support.html
docs/d2/de4/: profiling_8hpp.html  profiling_8hpp_source.html
docs/d2/de5/: structhp_1_1vk_1_1____hp__vk__is__in__extension__prop__list__coll__graph.dot
docs/d3/d61/: multithreading_8hpp__incl.map  multithreading_8hpp__incl.md5
docs/d3/d8c/: structhp_1_1vk_1_1vertex__coll__graph.map  structhp_1_1vk_1_1vertex__coll__graph.md5
docs/d3/d9c/: multithreading_8hpp.html  multithreading_8hpp_source.html
docs/d4/d10/: structhp_1_1profile__result.html
docs/d4/d28/: config_8hpp__dep__incl.dot  config_8hpp__dep__incl.map  config_8hpp__dep__incl.md5
docs/d5/d0f/: classhp_1_1vk_1_1buffer__layout.html
docs/d5/d2d/: hp_8hpp__dep__incl.dot  hp_8hpp__dep__incl.map  hp_8hpp__dep__incl.md5
docs/d5/d6a/: classhp_1_1vk_1_1shader__program__coll__graph.dot
docs/d5/dcc/: vk_8hpp__incl.dot  vk_8hpp__incl.map  vk_8hpp__incl.md5
docs/d5/dee/: structhp_1_1vk_1_1vertex.html
docs/d6/d0a/: classhp_1_1vk_1_1generic__buffer.html
docs/d6/d7a/: namespacehp.html
docs/d7/d49/: structhp_1_1vk_1_1____hp__vk__is__in__required__extensions__coll__graph.dot
docs/d7/d69/: classhp_1_1vk_1_1generic__buffer__inherit__graph.map  classhp_1_1vk_1_1generic__buffer__inherit__graph.md5
docs/d7/d73/: classhp_1_1vk_1_1vertex__buffer__coll__graph.map  classhp_1_1vk_1_1vertex__buffer__coll__graph.md5
docs/d7/d93/: profiling_8hpp__incl.dot  profiling_8hpp__incl.map  profiling_8hpp__incl.md5
docs/d7/dea/: hp_8hpp.html  hp_8hpp_source.html
docs/d7/dfa/: structhp_1_1vk_1_1queue__family__indices__coll__graph.map  structhp_1_1vk_1_1queue__family__indices__coll__graph.md5
docs/d8/d84/: classhp_1_1profiler__session.html
docs/d8/dbc/: structhp_1_1code__location__coll__graph.map  structhp_1_1code__location__coll__graph.md5
docs/d8/ddb/: structhp_1_1vk_1_1____hp__vk__is__in__layer__prop__list.html
docs/d8/ddf/: vk_8hpp__dep__incl.dot  vk_8hpp__dep__incl.map  vk_8hpp__dep__incl.md5
docs/d8/dfd/: config_8hpp.html  config_8hpp_source.html
docs/d9/d22/: classhp_1_1profiler__coll__graph.dot
docs/da/d28/: classhp_1_1profiler__session__coll__graph.dot  classhp_1_1profiler__session__coll__graph.map  classhp_1_1profiler__session__coll__graph.md5
docs/da/d33/: structhp_1_1profile__result__coll__graph.dot  structhp_1_1profile__result__coll__graph.map  structhp_1_1profile__result__coll__graph.md5
docs/da/d74/: namespacehp_1_1vk.html  namespacehp_1_1vk_aa7195ccef9de54ede16edbd813342934_icgraph.map  namespacehp_1_1vk_aa7195ccef9de54ede16edbd813342934_icgraph.md5
docs/da/de3/: structhp_1_1vk_1_1swap__chain__support__coll__graph.map  (+1 more)
docs/html/: annotated.html  classes.html  dir_16e860880acdf9d3e09408cc5156cb12.html  dir_950e320aff8085aa7f2d73afb00b4f69.html  dir_950e320aff8085aa7f2d73afb00b4f69_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  (+51 more)
examples/: CMakeLists.txt  main.cpp
include/hp/: config.hpp  hp.hpp  logging.hpp  multithreading.hpp  profiling.hpp
lib/: MoltenVK_icd.json
run-env/shader_pack/: shader_metadat.txt  vert.vert
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/hp/: config.hpp  hp.cpp  hp.h  hp.hpp  logging.cpp  logging.hpp  multithreading.cpp  profiling.cpp  profiling.hpp
(+100 files in other folders)
